--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>2017</b><br>Number of person: <b>4</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Ivory Coast, Congo, Nigeria</b><br>Cause of death: <b>beaten to death while imprisoned in camp in Zawiyah (LY)</b><br>Source: WorldCrunch<br>
+Found dead: <b>29/10/15</b><br>Number of person: <b>14</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>died when boat capsized between Kalymnos and Kalolimnos (GR) in the Aegean Sea</b><br>Source: IOM/UNHCR/Xinhua<br>
 
 <br>
 
