--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>02/05/13</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Moncef (man, 25)</b><br>Region of origin: <b>Tunisia</b><br>Cause of death: <b>suicide, in Zurich (CH) awaiting pending deportation</b><br>Source: WSWS/Bildung fur alle/Libertare aktion/WOZ<br>
+Found dead: <b>23/04/07</b><br>Number of person: <b>11</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Sub-Saharan Africa, Senegal</b><br>Cause of death: <b>11 reportedly disappeared at sea on way from Senegal to Canary Islands (ES)</b><br>Source: EXP/EP/jW<br>
 
 <br>
 
