--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>2001</b><br>Number of person: <b>2</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Tunisia</b><br>Cause of death: <b>stowaways, found suffocated in the hull of a ship in Brindisi (IT)</b><br>Source: IRR<br>
+Found dead: <b>21/10/16</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (boy, 17)</b><br>Region of origin: <b>Somalia</b><br>Cause of death: <b>pressured by neo-Nazis to jump to his death from tower in Schmölln, Thüringen (DE)</b><br>Source: IBTimes/Mail Online/Independent<br>
 
 <br>
 
