--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>21/05/01</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Shurat Tamo (boy, 14)</b><br>Region of origin: <b>Kurdistan</b><br>Cause of death: <b>suicide, in refugee centre in De Lier (NL) after asylum application was rejected</b><br>Source: PRIME<br>
+Found dead: <b>06/12/11</b><br>Number of person: <b>2</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>died of dehydration on vessel carrying 53 migrants and rescued near Dar Kebdani (MA)</b><br>Source: FE<br>
 
 <br>
 
