--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>17/04/01</b><br>Number of person: <b>3</b><br>Name, gender, age: <b>N.N. (2 women; 1 man)</b><br>Region of origin: <b>Georgia</b><br>Cause of death: <b>froze to death in the Belles mountains on Bulgarian-Greek border trying to walk to Greece</b><br>Source: MNS<br>
+Found dead: <b>09/10/12</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (girl, ±5)</b><br>Region of origin: <b>Sub-Saharan Africa</b><br>Cause of death: <b>drowned, body found near Galapagos beach in the Spanish enclave of Melilla (ES)</b><br>Source: FE/SUR<br>
 
 <br>
 
