--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>09/10/12</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (girl, ±5)</b><br>Region of origin: <b>Sub-Saharan Africa</b><br>Cause of death: <b>drowned, body found near Galapagos beach in the Spanish enclave of Melilla (ES)</b><br>Source: FE/SUR<br>
+Found dead: <b>28/10/95</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Djemal Flissa (man, 29)</b><br>Region of origin: <b>Algeria</b><br>Cause of death: <b>died after 44 day hunger strike, tied to stretcher in air ambulance deportation from Great Britain to Algeria</b><br>Source: CARF/IRR<br>
 
 <br>
 
