--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>15/09/17</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (boy, 12)</b><br>Region of origin: <b>Syria</b><br>Cause of death: <b>shot by Turkish border guards at unspecified location while trying to cross Syrian-Turkish border</b><br>Source: SOHR/IOM<br>
+Found dead: <b>16/06/17</b><br>Number of person: <b>5</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Sub-Saharan Africa</b><br>Cause of death: <b>bodies found in advanced state of decomposition on boat adrift at sea, 70 miles off Cartagena (ES)</b><br>Source: SalvaM<br>
 
 <br>
 
