--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>03/08/99</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Rachid Sbaai (19)</b><br>Region of origin: <b>Morocco</b><br>Cause of death: <b>suicide, set fire to himself out of fear of deportation in detention centre in Büren (DE)</b><br>Source: MNS/ST/ARI<br>
+Found dead: <b>27/04/04</b><br>Number of person: <b>2</b><br>Name, gender, age: <b>N.N. (2 men)</b><br>Region of origin: <b>North Africa</b><br>Cause of death: <b>stowaways, found dead in the hold of Turkish cargo ship in port of Cartagena (ES)</b><br>Source: MNS/ST<br>
 
 <br>
 
