--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>11/05/11</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Aminullah Mohamadi (boy, 17)</b><br>Region of origin: <b>Afghanistan</b><br>Cause of death: <b>suicide, hanged himself in Parc de la Villette in Paris (FR) after being told he would be deported</b><br>Source: DRARI/INDf<br>
+Found dead: <b>Jul 08</b><br>Number of person: <b>15</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Somalia</b><br>Cause of death: <b>died of starvation after walking for 10 days in the Libyan desert to Italy due to car failure</b><br>Source: TRP<br>
 
 <br>
 
