--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>12/09/15</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Africa</b><br>Cause of death: <b>stowaway, found dead in wheel bay of plane at Schiphol, Amsterdam Airport (NL)</b><br>Source: MNS<br>
+Found dead: <b>27/06/01</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man)</b><br>Region of origin: <b>North Africa</b><br>Cause of death: <b>died of toxic fumes emitted by boat motor while travelling to Spain</b><br>Source: MUGAK/GARA/MNS<br>
 
 <br>
 
