--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>03/02/02</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>died of medical neglect in detention centre in Belgium</b><br>Source: AIgerieMonde<br>
+Found dead: <b>16/09/00</b><br>Number of person: <b>2</b><br>Name, gender, age: <b>N.N. (2 men)</b><br>Region of origin: <b>India</b><br>Cause of death: <b>stowaways, suffocated in shipping container in Korinthos harbour (GR)</b><br>Source: taz/IRN<br>
 
 <br>
 
