--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>03/01/09</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Hussein Zahidul (man, 24)</b><br>Region of origin: <b>Bangladesh</b><br>Cause of death: <b>body found in ditch near the immigration bureau in Votanikos (GR)</b><br>Source: KI/IRR/MNS<br>
+Found dead: <b>10/11/93</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Mihail Bunja (man, 23)</b><br>Region of origin: <b>Romania</b><br>Cause of death: <b>froze to death after jumping from train in Schwandorf (DE) to escape border police</b><br>Source: IMEDANA/OL/ZAG<br>
 
 <br>
 
