--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>15/11/02</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Lata Aradinovic (man, 34)</b><br>Region of origin: <b>Serbia (Roma)</b><br>Cause of death: <b>suicide, set himself on fire in Syke (DE) after asylum claim was rejected</b><br>Source: ARI<br>
+Found dead: <b>21/12/04</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Africa</b><br>Cause of death: <b>reportedly drowned after falling off boat 24 miles from Fuerteventura (ES)</b><br>Source: APDHA/MUGAK<br>
 
 <br>
 
