--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>18/09/15</b><br>Number of person: <b>7</b><br>Name, gender, age: <b>N.N. (1 child)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>died when boat to Europe sank off coast of Libya</b><br>Source: Euronews<br>
+Found dead: <b>21/01/04</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (man)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>body found at sea near Fuerteventura (ES), reportedly from an old shipwreck</b><br>Source: MC<br>
 
 <br>
 
