--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>12/10/94</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (child)</b><br>Region of origin: <b>Albania</b><br>Cause of death: <b>reportedly drowned after boat capsized in the Otranto Channel (IT)</b><br>Source: TL<br>
+Found dead: <b>02/09/15</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Aylan Kurdi (boy, 3)</b><br>Region of origin: <b>Syria</b><br>Cause of death: <b>drowned after boat capsized near Bodrum (TR)</b><br>Source: IBT/Guardian/CBS/VK<br>
 
 <br>
 
