--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>Mar 00</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (pregnant woman)</b><br>Region of origin: <b>Macedonia</b><br>Cause of death: <b>died in a fire at undocumented workers' accommodation in Legnano (IT)</b><br>Source: IRR<br>
+Found dead: <b>17/04/02</b><br>Number of person: <b>3</b><br>Name, gender, age: <b>N.N. (3 men)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>disappeared after migrant ship sank north of Naxos (GR)</b><br>Source: AFP/IRR<br>
 
 <br>
 
