--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>28/03/11</b><br>Number of person: <b>10</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Sub-Saharan Africa</b><br>Cause of death: <b>missing, feared drowned after boat sank travelling to Lampedusa (IT) from Libya; 6 rescued by Egyptian fishing boats</b><br>Source: GuardianUn./PerCat/AdnK<br>
+Found dead: <b>31/01/09</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (woman)</b><br>Region of origin: <b>Sub-Saharan Africa</b><br>Cause of death: <b>found by Moroccan navy in boat sailing near coast of Al Hoceima (MA)</b><br>Source: Can7/MUGAK<br>
 
 <br>
 
