--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>15/06/05</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N. (pregnant woman, ±20)</b><br>Region of origin: <b>Sub-Saharan Africa</b><br>Cause of death: <b>reportedly drowned while trying to reach Gran Canaria (ES)</b><br>Source: EP<br>
+Found dead: <b>01/04/17</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Mohammed Hassan (17)</b><br>Region of origin: <b>Iraq</b><br>Cause of death: <b>crushed when truck he had been clinging to reversed over him in Banbury, Oxfordshire (GB)</b><br>Source: BBC/IOM<br>
 
 <br>
 
