--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>16/04/10</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Yeni P. (woman, 34)</b><br>Region of origin: <b>Indonesia</b><br>Cause of death: <b>suicide, hanged herself in deportation centre in Hamburg (DE)</b><br>Source: jW/Karawane/IRR/FR-H<br>
+Found dead: <b>06/05/11</b><br>Number of person: <b>32</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>Sub-Saharan Africa</b><br>Cause of death: <b>went missing when boat carrying 600 migrants to Italy sank off coast of Tripoli (LY)</b><br>Source: Corrispondenti/VF/LR/WP/ABC/UNHCR/UN/MaltaT<br>
 
 <br>
 
