--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>01/04/16</b><br>Number of person: <b>2</b><br>Name, gender, age: <b>N.N. (2 girls, 2, 7)</b><br>Region of origin: <b>Iraq</b><br>Cause of death: <b>died trying to reach Lesbos (GR), siblings buried together on the island</b><br>Source: CNN<br>
+Found dead: <b>Aug 96</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Ivica Matic (34)</b><br>Region of origin: <b>Serbia</b><br>Cause of death: <b>stepped on mine after agreeing to "voluntary" deportation to Sarajevo from Germany</b><br>Source: ZAG<br>
 
 <br>
 
