--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>2005</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Abdullah Tokhi (man, 35)</b><br>Region of origin: <b>Afghanistan</b><br>Cause of death: <b>murdered in Afghanistan after forced repatriation from Great Britain, asylum claim rejected</b><br>Source: Independent<br>
+Found dead: <b>01/08/12</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>drowned, when boat arrived at a Spanish island near Morocco</b><br>Source: MUGAK<br>
 
 <br>
 
