--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>01/08/12</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>drowned, when boat arrived at a Spanish island near Morocco</b><br>Source: MUGAK<br>
+Found dead: <b>29/10/07</b><br>Number of person: <b>17</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>9 drowned in shipwreck near Catania (IT); 8 missing</b><br>Source: MUGAK/AFVIC<br>
 
 <br>
 
