--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>16/09/07</b><br>Number of person: <b>6</b><br>Name, gender, age: <b>N.N. (6 men)</b><br>Region of origin: <b>Algeria</b><br>Cause of death: <b>disappeared after boat sank near Cabo de Gata, Almería (ES)</b><br>Source: EP/ELM/EFE<br>
+Found dead: <b>16/12/94</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>died while travelling with 63 refugees on 3 rubber rafts in Baltic Sea near Gotland (SE)</b><br>Source: FECL<br>
 
 <br>
 
