--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>19/01/09</b><br>Number of person: <b>30</b><br>Name, gender, age: <b>N.N. (±25)</b><br>Region of origin: <b>Tunisia</b><br>Cause of death: <b>went missing when boat carrying 35 migrants capsized off coast of Tunisia on way to Italy</b><br>Source: LR/FE/LPC/PICUM/APDHA/CDS/AEDH/LIDU<br>
+Found dead: <b>04/02/18</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Marlyatou "Marly" Diallo (w, 26)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>drowned when small wooden boat capsized off coast of the Spanish enclave of Melilla (ES); 1 survivor</b><br>Source: PRI/PrivateSource/BBC/El Diario/Caminando/IOM<br>
 
 <br>
 
