--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>1994</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Lejla Ibrahimovic (woman)</b><br>Region of origin: <b>Bosnia</b><br>Cause of death: <b>suicide, in Birmingham (GB) after the Home Office refused to grant her husband a visa, she had 2 children</b><br>Source: GuardianUn./ST/IRR<br>
+Found dead: <b>13/01/17</b><br>Number of person: <b>2</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>crushed to death in boat carrying 191 other passengers heading from Libya to Italy</b><br>Source: Independent<br>
 
 <br>
 
