--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>08/01/98</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Issah M. (30)</b><br>Region of origin: <b>Togo</b><br>Cause of death: <b>disappeared, presumed dead after deportation from Germany to Togo</b><br>Source: ARI<br>
+Found dead: <b>01/09/06</b><br>Number of person: <b>7</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>reportedly drowned after boat sank near coast of Crete (GR)</b><br>Source: FE/FR-BB<br>
 
 <br>
 
