--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>17/06/17</b><br>Number of person: <b>110</b><br>Name, gender, age: <b>N.N.</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>missing after boat sank off coast of Zuwara (LY); 25 rescued</b><br>Source: IOM Libya<br>
+Found dead: <b>Nov 15</b><br>Number of person: <b>2</b><br>Name, gender, age: <b>N.N. (2 children)</b><br>Region of origin: <b>unknown</b><br>Cause of death: <b>drowned when 1 of 3 dinghies headed from Bodrum (TR) to Kos (GR) sank; 28 rescued</b><br>Source: Imkander<br>
 
 <br>
 
