--- a/death_of_refugees_and_migrants.html
+++ b/death_of_refugees_and_migrants.html
@@ -7,7 +7,7 @@
 34,361 documented deaths of refugees and migrants due to the restrictive policies of "Fortress Europe"<br>
 Documentation by UNITED as of 5 May 2018<br>
 <br>
-Found dead: <b>09/03/06</b><br>Number of person: <b>1</b><br>Name, gender, age: <b>Naser Al Shdaida (man, 36)</b><br>Region of origin: <b>Syria</b><br>Cause of death: <b>suicide, lay down under train in London (GB) out of fear of deportation after asylum claim was rejected</b><br>Source: IRR/Streatham<br>
+Found dead: <b>13/08/01</b><br>Number of person: <b>2</b><br>Name, gender, age: <b>N.N. (2 children)</b><br>Region of origin: <b>Africa</b><br>Cause of death: <b>decaying bodies found in the hold of Panamanian vessel in La Coruña (ES)</b><br>Source: MNS<br>
 
 <br>
 
